# hmscitydesktop

./: .gitignore  README.md
backend/: authtemp.py  create_admin_hash.py  database.py  render.yaml  requirements.txt  seed_data.py
backend/app/: main.py
backend/app/.github/workflows/: keep-backend-alive.yml
backend/app/models/: __init__.py  models.py
backend/app/routers/: appointments.py  auth.py  bills.py  dashboard.py  doctors.py  patients.py  reports.py  seeder.py  settings.py
backend/app/schemas/: schemas.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx  ProtectedRoute.tsx  SelectPatient.tsx
frontend/src/config/: appConfig.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Dashboard.tsx  DoctorMaster.tsx  IPBillEntry.tsx  Login.tsx  OPBillEntry.tsx  PatientRegistration.tsx  Reports.tsx  Settings.tsx
frontend/src/services/: api.ts
frontend/src/types/: barrel.ts  index.tsx
python/: start_backend.bat
python/backend/: create_admin_hash.py  database.py  requirements.txt  seed_data.py  temp
python/backend/app/: main.py
python/backend/app/models/: __init__.py  models.py
python/backend/app/routers/: appointments.py  auth.py  bills.py  dashboard.py  doctors.py  patients.py  reports.py  seeder.py  settings.py
python/backend/app/schemas/: __init__.py  schemas.py
python/backend/venvhmsalpha/Scripts/: activate  activate.bat
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
